force-app/main/default/objects/Calendar_Access_Rule__c/Calendar_Access_Rule__c.object-meta.xml
<CustomObject>
    <description>Per-user RBAC rules for Team Calendar Board calendar views.</description>
    <label>Calendar Access Rule</label>
    <nameField>
        <displayFormat>CAR-{00000}</displayFormat>
        <label>Calendar Access Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calendar Access Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>