force-app/main/default/objects/Calendar_Access_Rule__c/fields/Calendar_View_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_View_Id__c</fullName>
    <label>Calendar View Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>