force-app/main/default/objects/Calendar_Access_Rule__c/fields/Calendar_View_Name__c.field-meta.xml
<CustomField>
    <fullName>Calendar_View_Name__c</fullName>
    <label>Calendar View Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>