force-app/main/default/objects/Calendar_Access_Rule__c/fields/Can_Assign_Users__c.field-meta.xml
<CustomField>
    <fullName>Can_Assign_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Assign Users</label>
    <type>Checkbox</type>
</CustomField>