force-app/main/default/objects/Calendar_Access_Rule__c/fields/Can_Create__c.field-meta.xml
<CustomField>
    <fullName>Can_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Create</label>
    <type>Checkbox</type>
</CustomField>