force-app/main/default/objects/Calendar_Access_Rule__c/fields/Can_Delete__c.field-meta.xml
<CustomField>
    <fullName>Can_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Delete</label>
    <type>Checkbox</type>
</CustomField>