force-app/main/default/objects/Calendar_Access_Rule__c/fields/Can_Manage_Security__c.field-meta.xml
<CustomField>
    <fullName>Can_Manage_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Manage Security</label>
    <type>Checkbox</type>
</CustomField>