force-app/main/default/objects/Calendar_Access_Rule__c/fields/Can_View__c.field-meta.xml
<CustomField>
    <fullName>Can_View__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can View</label>
    <type>Checkbox</type>
</CustomField>