force-app/main/default/objects/Calendar_Access_Rule__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <label>Target User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Calendar Access Rules</relationshipLabel>
    <relationshipName>CalendarAccessRules</relationshipName>
    <type>Lookup</type>
</CustomField>